# Yolov5-cpp

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Property Sheets/: Common.props  Debug.props  Release.props
Tools/: CMakeLists.txt  compareLabels.cpp  compareMasks.cpp  extractMask.cpp  images2video.cpp  minAreaRect.cpp  saveConsole.cpp  trackBarTest.cpp
Tools/affineTransform/: CMakeLists.txt  affineTransform.cpp
Tools/autoGenRotate/: CMakeLists.txt  autoGenRotate.cpp
Tools/boundary/: CMakeLists.txt  boundary.cpp
Tools/compareAngles/: CMakeLists.txt  compareAngles.cpp
Tools/minAreaRect/: CMakeLists.txt  minAreaRect.cpp
Tools/perspective/: CMakeLists.txt  perspective.cpp
Yolo/: CMakeLists.txt  dataloader.cpp  detector.cpp  detector.hpp  general.cpp  general.hpp  layers.cpp  layers.hpp  logger.cpp  logger.hpp  object.hpp  parser.cpp  parser.hpp  pch.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  visualize.cpp  visualize.hpp  yolo.cpp  yolo.hpp
Yolo/include/yolo/: dataloader.hpp  detector.hpp  general.hpp  logger.hpp  postprocess.hpp  timer.hpp  utils.hpp  yolo.hpp
Yolo/src/: anchor.hpp  dataloader.cpp  detector.cpp  general.cpp  layers.cpp  logger.cpp  parser.cpp  postprocess.cpp  timer.cpp  utils.cpp  visualize.cpp
Yolo/test/: CMakeLists.txt  test_general.cpp  test_logger.cpp
Yolov5-seg/: CMakeLists.txt  yolov5-seg.cpp
cmake/: AddGitSubmodule.cmake
data/: idcard.txt  idcard.yaml
docs/: rect.drawio  rotation_angle.drawio
weights/: yolov5l-seg.ncnn.param  yolov5l.ncnn.param  yolov5m-seg.ncnn.param  yolov5m.ncnn.param  yolov5n-seg.ncnn.param  yolov5n.ncnn.param  yolov5s-seg-idcard-2.ncnn.param  yolov5s-seg-idcard-best.ncnn.param  yolov5s-seg.ncnn.param  yolov5s-seg.param  yolov5s.ncnn.param  yolov5x-seg.ncnn.param  yolov5x.ncnn.param
